tests/snapshots/run_wpt_conformance__coreml_div_float16_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "div.https.any.js",
    "div float16 1D tensors",
    "coreml",
    "PASS",
)
